force-app/main/default/objects/Ingredient__c/fields/Is_Perishable__c.field-meta.xml
<CustomField>
    <fullName>Is_Perishable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Perishable</label>
    <type>Checkbox</type>
</CustomField>