force-app/main/default/objects/Ingredient__c/fields/Preferred_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ingredients</relationshipLabel>
    <relationshipName>Ingredients</relationshipName>
    <type>Lookup</type>
</CustomField>