force-app/main/default/objects/Ingredient__c/fields/Reorder_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Threshold__c</fullName>
    <label>Reorder Threshold</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>