force-app/main/default/objects/Ingredient__c/fields/Safety_Stock__c.field-meta.xml
<CustomField>
    <fullName>Safety_Stock__c</fullName>
    <label>Safety Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>