force-app/main/default/objects/Ingredient__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cup (c)</fullName>
            </value>
            <value>
                <fullName>Fluid ounce (fl oz)</fullName>
            </value>
            <value>
                <fullName>Gallon (gal)</fullName>
            </value>
            <value>
                <fullName>Gram (g)</fullName>
            </value>
            <value>
                <fullName>Kilogram (kg)</fullName>
            </value>
            <value>
                <fullName>Liter (L)</fullName>
            </value>
            <value>
                <fullName>Milliliter (mL)</fullName>
            </value>
            <value>
                <fullName>Ounce (oz)</fullName>
            </value>
            <value>
                <fullName>Pint (pt)</fullName>
            </value>
            <value>
                <fullName>Pound (lb)</fullName>
            </value>
            <value>
                <fullName>Quart (qt)</fullName>
            </value>
            <value>
                <fullName>Tablespoon (tbsp)</fullName>
            </value>
            <value>
                <fullName>Teaspoon (tsp)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>